# tuplex

./: .dockerignore  .gitattributes  .gitignore  CNAME  Dockerfile  Dockerfile_no_git  README.md  README.txt
compiler/: .gitignore  CMakeLists.txt
compiler/autotest/bench/: CMakeLists.txt  timing.h
compiler/autotest/cmd/: test.py
compiler/autotest/lang/: adv_inheritance_test.tx  arithmetictest.tx  arraydynamictest.tx  arrayinittest.tx  assignmenttest.tx  constructortest.tx  declsyntaxtest.tx  deletetest.tx  equalstest.tx  errtest.tx  floattest.tx  funcoverloadtest.tx  funcrecursetest.tx  funcvarargs.tx  genericconvtest.tx  genericmodifiability.tx  genericnested.tx  genericrefbound.tx  genericstest.tx  generictypespec.tx  genericvaluespec.tx  globalstest.tx  helloworld.tx  ifelsetest.tx  importtest.tx  interfaceadaptertest.tx  interfacetest.tx  inttest.tx  lookuptest.tx  mainsignaturetest.tx  membermodifiability.tx  membertest.tx  polymorphtest.tx  rangeiftest.tx  recursivetypetest.tx  reftest.tx  sequenceiftest.tx  syntax_intro.tx  test.modul.tx  test.py  (+2 more)
compiler/autotest/lib/: array_equals.tx  equality_test.tx  for_loops.tx  helloworld.tx  math_test.tx  opt_test.tx  range_test.tx  scalars_test.tx  selection_test.tx  string_test.tx  test.py
compiler/scripts/: copytxrelease  txb  txc  txinstall  txll  txts
compiler/src/: CMakeLists.txt  TODO.txt  driver.cpp  driver.hpp  identifier.hpp  llvm_generator.cpp  llvm_generator.hpp  main.cpp  parser_if.hpp  parsercontext.cpp  parsercontext.hpp  tx_declaration_flags.hpp  tx_field_storage.hpp  tx_logging.hpp  tx_options.hpp
compiler/src/ast/: ast_declpass.cpp  ast_declpass.hpp  ast_entitydecls.cpp  ast_entitydecls.hpp  ast_entitydefs.cpp  ast_entitydefs.hpp  ast_fielddef_node.cpp  ast_fielddef_node.hpp  ast_identifier.hpp  ast_modbase.cpp  ast_modbase.hpp  ast_modbase_codegen.cpp  ast_node.cpp  ast_node.hpp  ast_util.hpp  ast_wrappers.hpp  lexcontext.cpp  lexcontext.hpp
compiler/src/builtin/: builtin_types.cpp  builtin_types.hpp
compiler/src/parser/: lexer.l  location.hpp  parser.y  position.hh
compiler/src/symbol/: declaration.cpp  declaration.hpp  entity.cpp  module.cpp  module.hpp  package.cpp  package.hpp  qual_type.cpp  qual_type.hpp  symbol.cpp  symbol.hpp  symbol_lookup.hpp  type.cpp  type_base.hpp  type_class_handler.cpp  type_class_handler.hpp  type_codegen.cpp  type_composite.hpp  type_function.hpp  type_registry.cpp  type_registry.hpp  type_scalar.hpp
compiler/src/txparser/: bison_tx_parser_facade.cpp  scanner.cpp  scanner.hpp  tx_tokens.cpp  tx_tokens.hpp
compiler/src/util/: assert.hpp  logging.hpp  util.hpp
compiler/tx/: array.tx  collection.tx  comparable.tx  elementary.tx  enumerable.tx  fmt.tx  io.tx  math.tx  number.tx  optional.tx  range.tx  selection.tx  sequence.tx
compiler/tx/c/: stdlib.tx
compiler/tx/os/: file.tx
proto/: .gitignore  CMakeLists.txt  txb
proto/autotest/: test.py
proto/autotest/bench/: CMakeLists.txt  primes_cbench.c  primes_txbench.tx  timing.c
proto/autotest/bi_lib/: array_interface.tx  test.py
proto/autotest/cmd/: test.py
proto/autotest/lang/: arithmetictest.tx  arraybasictest.tx  arraydynamictest.tx  arrayinittest.tx  arraymodifiability.tx  arraytest.tx  assignmenttest.tx  binoptest.tx  constructiontest.tx  constructortest.tx  declsyntaxtest.tx  deletetest.tx  equalstest.tx  errtest.tx  floattest.tx  funcdeclsyntaxtest.tx  funclogictest.tx  funcoverloadtest.tx  funcrecursetest.tx  funcrettest.tx  funcsyntaxtest.tx  funcvarargs.tx  genericconvtest.tx  genericmodifiability.tx  genericnested.tx  genericrefbound.tx  generics_value.tx  genericstest.tx  genericstest2.tx  genericstest3.tx  genericstest4.tx  generictypespec.tx  genericvaluespec.tx  globalstest.tx  helloworld.tx  ifelsetest.tx  importtest.tx  interfaceadaptertest.tx  interfacetest.tx  inttest.tx  (+17 more)
proto/autotest/lib/: array_equals.tx  array_interface.tx  equality_test.tx  for_loops.tx  format_test.tx  helloworld.tx  scalars_test.tx  string_test.tx  test.py
proto/notes/: dataspaces.txt  type_declaration.txt  type_resolution.txt
proto/scripts/: copyrelease  txb  txc  txinstall  txts
proto/src/: CMakeLists.txt  TODO.txt  TuplexConfig.h.in  ast.cpp  ast.hpp  ast_array.cpp  ast_array.hpp  ast_array_codegen.cpp  ast_base.hpp  ast_base_codegen.cpp  ast_constexpr.hpp  ast_constexpr_codegen.cpp  ast_conv.cpp  ast_conv.hpp  ast_conv_codegen.cpp  ast_conversion.cpp  ast_declbase.hpp  ast_exprs.hpp  ast_exprs_codegen.cpp  ast_fields.hpp  ast_fields_codegen.cpp  ast_funcs.hpp  ast_lit.cpp  ast_lit.hpp  ast_lit_codegen.cpp  ast_stmts.hpp  ast_stmts_codegen.cpp  ast_types.hpp  ast_types_codegen.cpp  ast_util.cpp  ast_util.hpp  ast_wrappers.hpp  bison_parser.cpp  bison_parser_facade.cpp  bison_tx_parser_facade.cpp  context.cpp  context.hpp  declaration.cpp  declaration.hpp  driver.cpp  (+55 more)
proto/src/ast/: ast_base_codegen.cpp  ast_declpass.cpp  ast_declpass.hpp  ast_decls.cpp  ast_decls.hpp  ast_entitydecls.cpp  ast_entitydecls.hpp  ast_entitydecls_codegen.cpp  ast_entitydefs.cpp  ast_entitydefs.hpp  ast_fielddef_codegen.cpp  ast_fielddef_node.cpp  ast_fielddef_node.hpp  ast_identifier.hpp  ast_modbase.cpp  ast_modbase.hpp  ast_node.cpp  ast_node.hpp  ast_util.cpp  ast_util.hpp  ast_wrappers.hpp  lexcontext.hpp
proto/src/builtin/: builtin_types.cpp  builtin_types.hpp
proto/src/parser/: lexer.l  location.hpp  parser.y  position.hh  tx_adapter.cpp  tx_scanner_adapter.cpp
proto/src/symbol/: declaration.cpp  declaration.hpp  entity.cpp  (+27 more)
proto/test/: arraytest.tx  binop_test.tx  branchtest.tx  collections.tx  constructiontest.tx  dssyntaxtest.tx  errtest.tx  fordev.tx  fortest.tx  functest.tx  functest2.tx  genericstest.tx  genericstest2.tx  helloworld.tx  ifelsetest.tx  interfacetest.tx  inttest.tx  membertest.tx  minigentest.tx  minitest.tx  polymorphtest.tx  recursetest.tx  recursivetypetest.tx  reftest.tx  sequencelittest.tx  test.tx  tx.proto.print.tx  tx.proto.string.tx
proto/tx/: array.tx  collection.tx  comparable.tx  elementary.tx  enumerable.tx  fmt.tx  io.tx  number.tx  range.tx  sequence.tx  string.tx
(+174 files in other folders)
